	(REJECTED) Migrating to stash
	(DONE) Adding keybindings for renaming/deleting/refreshing
	(DONE) Add option to change bars position // requested by <dmaphy>
	(DONE) Add option to autorename point the newest created objects by the Treebrowser


+-------------------------------+
| Development release ChangeLog |
+-------------------------------+


14-12-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		Fixed nighty compilation error (reported by Enrico Tröger)

10-12-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* ChangeLog
		Update
	* README
		Update
	* src/treebrowser.c
		Fixed warning: ISO C90 forbids mixed declarations and code (in check_hidden())
		Fixed warning: 'return' with no value, in function returning non-void (in treebrowser_checkdir())
		Fixed compilation warning with strlen()
		Description changed (taken from ubuntu`s repos)


10-12-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	Bumped version 0.20
		Now will following the version number of geany


09-12-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		Fixed wrong colors in addressbar when last directory wasn`t existing,
			but then chrooting.
		"Right click" menu rearanged to looks more logically


01-11-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		Added dialog question when creating/removing file, to prevent from losing
			target files if they exists.


01-11-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* ChangeLog
		Revision 1688, Modified Thu Oct 28 21:02:33 2010 UTC by colombanw

		Build system: don't force building the Treebrowser plugin

		If the dependencies of the Treebrowser plugin are not met, simply
		disable the plugin rather than abort the whole build.

		Also add checks for creat(), sys/types.h, sys/stat.h and fcntl.h, and
		fix the check for GIO to correctly handle the case it's not available.


25-10-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* src/treebrowser.c